package com.mycompany.lapr2_interfacegrafica.model;

public interface PasswordGeneratorAlgorithm {

    public String generatePassword(String nameM, String emailM);
    
}
