@startuml
skinparam classAttributeIconSize 0

class Collaborator {
  -String name
  -String email
  +Collaborator(nameM, emailM)
  +String getName()
  +String getEmail()
}

class Manager {
  -String name
  -String email
  +Manager(nameM, emailM)
  +String getName()
  +String getEmail()
}

class Organization {
  -String name
  -String NIF
  +{static} Manager newManager(nameM, emailM)
  +{static} Collaborator newCollaborator(nameC, emailC)
  +Organizacao(name, NIF, nameM, emailM, nameC, emailC)
  -getName()
}

class Platform {
  -String designation
  +OrganizationsRecord getOrganizationsRecord()
  +FacadeAuthorization getFacadeAuthorization()
  +PasswordGeneratorAlgorithm getPwdGeneratorAlgorithm()
}

class OrganizationsRecord {
  +Organization newOrganization(name, NIF, nameM, emailM, nameC, emailC)
  +validateOrganization(Organization org)
  +organizationRegister(Organization org)
  -addOrganization(Organization org)
  -RegistesManagerAsUser(Manager manager)
  -sendEmail(String orgName, String emailM, String pwd, "MANAGER")
  -RegistesCollaboratorAsUser(Collaborator collab)
  -sendEmail(String orgName, String emailC, String pwd, "COLLABORATOR")
}

class FacadeAuthorization {
  +registesUserWithRoles(nameM, emailM, pwdM, "MANAGER")
  +registesUserWithRole(nameC, emailC, pwdC, "COLLABORATOR")
}

interface PasswordGeneratorAlgorithm <<interface>>{
   +String generatePassword(String nameM, String emailM)
   +String generatePassword(String nameC, String emailC)
}

class OrganizationRecordController {
    +newOrganization(name, NIF, nameM, emailM, nameC, emailC)
    +organizationRegister()
}

class OrganizationRecordUI {
}

OrganizationRecordUI ..> OrganizationRecordController
OrganizationRecordController ..> Platform
OrganizationRecordController ..> OrganizationsRecord
OrganizationRecordController ..> Organization

OrganizationsRecord "1" --> "*" Organization : has registered
OrganizationsRecord ..> Collaborator
OrganizationsRecord ..> Manager
OrganizationsRecord ..> Platform
OrganizationsRecord ..> FacadeAuthorization
OrganizationsRecord ..> PasswordGeneratorAlgorithm
Organization "1" --> "1" Collaborator: has
Organization "1" --> "1" Manager: has

@enduml